--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-        <form name="contact" action="">
+        <form name="contact" method="POST" data-netlify="true">
             <input type="text" name="fullName" placeholder="full name"/>
             <input type="email" name="Email" placeholder="email address"/>
             <input type="submit"/>
